# kube_py

./: create_secret.py  pyproject.toml  test_pd.yaml
config/: credentials.cfg
