[tool.poetry]
name = "argo"
version = "0.1.0"
description = ""
authors = ["Dylan Bragdon"]

[tool.poetry.dependencies]
python = "^3.10"
hera-workflows = "^3.6.4"
kubernetes = "^24.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
